--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -228,17 +228,6 @@
     transition: all .3s
     color: #fff
     overflow: hidden
-    // &::before
-    //     content: ''
-    //     position: absolute
-    //     right: 0
-    //     left: 0
-    //     bottom: 0
-    //     top: 0
-    //     background: radial-gradient(100% 368.64% at 0% 0%, #FEB301 0%, #F36D1C 51.04%, #FB196F 100%)
-    //     width: 100%
-    //     height: 100%
-    //     z-index: -1
     &__sm
         max-width: 384px
         height: 200px
@@ -253,14 +242,14 @@
         z-index: 2
 
     &__content
-        position: relative
+        position: absolute
         opacity: 0
         z-index: -11
         display: flex
         flex-direction: column
         align-items: flex-start
         justify-content: space-between
-        height: 0%
+        height: 100%
         transition: opacity .3s
 
     &__text
@@ -286,7 +275,31 @@
     .servisec-card__content
         opacity: 1
         z-index: 11
-        height: 100%
+        position: initial
+
+.servisec-card.first
+    background-image: url(../images/servisec-card-1.jpg)
+    &:hover
+        background-image: url(../images/servisec-card-1.png)
+.servisec-card__sm:first-child
+    background-image: url(../images/servisec-card-2.jpg)
+    &:hover
+        background-image: url(../images/servisec-card-2.png)
+
+.servisec-card__sm:nth-child(2)
+    background-image: url(../images/servisec-card-3.jpg)
+    &:hover
+        background-image: url(../images/servisec-card-3.png)
+
+.servisec-card__sm:nth-child(3)
+    background-image: url(../images/servisec-card-4.jpg)
+    &:hover
+        background-image: url(../images/servisec-card-4.png)
+
+.servisec-card__sm:nth-child(4)
+    background-image: url(../images/servisec-card-5.jpg)
+    &:hover
+        background-image: url(../images/servisec-card-5.png)
 
 .subtitle
     margin-bottom: 14px
