--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -11,6 +11,26 @@
         font-size: 25px
         line-height: 37px
 
+    .banner
+        &-slide
+            height: 800px
+            padding-top: 150px
+        &-slider .slick-dots
+            bottom: 30px
+        &-item
+            height: 100%
+        &-item__img img
+            position: inherit
+            top: inherit
+            width: 95%
+        &-slider-btn-group
+            margin-top: -120px
+        &-item__images
+            margin-bottom: 30px
+
+    .socials-list
+        top: 50%
+
     .servisec
         &__title
             font-size: 68px
@@ -77,6 +97,9 @@
         display: inline-block
         svg
             width: 100%
+
+    .socials-list
+        right: 40px
 
     .servisec
         &__title
@@ -222,6 +245,15 @@
     .title
         font-size: 36px
         line-height: 54px
+
+    .banner
+        &-slider-btn-group
+            margin-top: -60px
+    .banner-slide
+        height: 760px
+
+    .img-position
+        margin-left: -36px
 
     .servisec
         margin-bottom: 70px
@@ -389,6 +421,38 @@
         width: 100%
 
 @media (max-width: 992px)
+
+    .header__mail
+        font-size: 16px
+        line-height: 20px
+        svg
+            width: 15px
+            height: 11px
+
+    .img-position
+        margin-left: 0
+
+    .banner
+        &-slide
+            height: 100vh
+        &-slider-btn-group
+            flex-direction: column
+            text-align: center
+            margin-top: 24px
+        &-slide .btn
+            margin-right: 0
+        &-slider__text
+            margin-top: 20px
+
+    .banner-item
+        &__img
+            max-width: 700px
+            width: 100%
+            height: 67vh
+            margin: 0 auto
+        &__img img
+            width: 75%
+            margin: 0 auto
 
     .servisec
         &__title
@@ -571,16 +635,11 @@
             height: 40px
         &__logo svg
             height: 100%
-        &__mail
-            font-size: 16px
-            line-height: 20px
-            svg
-                width: 15px
-                height: 11px
 
     .banner
         &__inner
-            height: 100%
+            position: relative
+            height: auto
             overflow: hidden
         &-slide
             padding-top: 104px
@@ -598,9 +657,12 @@
             margin-top: 20px
 
     .banner-item
-        height: 100%
+        height: auto
+        &__img img
+            width: 100%
         &__img
-            width: 90%
+            width: 100%
+            height: 100%
             margin: 0 auto
             left: 0
             right: 0
