--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -12,18 +12,16 @@
     width: 100%
     padding-top: 54px
     z-index: 10
-
     &__inner
         justify-content: space-between
         align-items: center
-
     &__phone
         font-weight: 500
         margin-bottom: 8px
-
+        &.change
+            color: #FFCE00
         &:hover
             color: #fff
-
     &__mail
         align-items: center
         font-size: 24px
@@ -38,34 +36,27 @@
         transform: translateY(2px)
         transition: transform .3s
 
-.container-fluid
-    width: 88%
-    margin-left: auto
-    position: relative
 .banner
     display: flex
     align-items: center
-    height: 100vh
     &-slider
         width: 100%
-
     &-item
         display: flex
         flex-direction: column
-        // height: 800px
-        height: 38vw
-        justify-content: flex-end
+        height: 100%
+        justify-content: space-between
         position: relative
-    &-item__img
-        position: absolute
-        top: 0
+    &-item__img img
+        width: 100%
+
     &-slider-btn-group
         position: relative
         z-index: 11
         display: flex
         align-items: center
         width: 100%
-        margin-top: -90px
+        margin-top: -70px
     &-slider__text
         font-weight: 500
         font-size: 12px
@@ -78,16 +69,17 @@
         position: absolute
         margin: 0 auto
         width: 100%
-        bottom: 120px
+        bottom: 40px
     .slick-dots li
         background-color: rgba(#fff, 0.6)
     .slick-dots li.slick-active
         background-color: #fff
 
 .banner-slide
-    height: 100vh
+    height: 102vh
     width: 100%
-    padding-top: 135px
+    padding-top: 19vh
+    padding-bottom: 70px
     &:nth-child(2n)
         background: radial-gradient(308.28% 203.65% at 100% 100%, #751470 0%, #671C6D 20%, #5E206C 39%, #641E69 49%, #741962 63%, #8F1155 78%, #B40544 94%, #C4003D 100%)
     &:nth-child(2n+1)
@@ -104,14 +96,14 @@
     display: none
 
 .img-position
-    margin-left: -84px
+    margin-left: -43px
 
 .socials
     &-list
         position: absolute
         right: 112px
         z-index: 11
-        top: 49%
+        top: 41%
     &-item:not(:last-child)
         margin-bottom: 59px
 
