--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -119,6 +119,7 @@
     .servisec-item
         max-width: 176px
         &__icon
+            margin: 0 auto
             width: 70px
             svg
                 width: 100%
@@ -434,7 +435,7 @@
 
     .banner
         &-slide
-            height: 100vh
+            height: auto
         &-slider-btn-group
             flex-direction: column
             text-align: center
@@ -448,7 +449,7 @@
         &__img
             max-width: 700px
             width: 100%
-            height: 67vh
+            height: auto
             margin: 0 auto
         &__img img
             width: 75%
