--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -157,23 +157,38 @@
     &-icon
         position: absolute
         top: -110px
-    &-item
-        text-align: center
-        max-width: 186px
-        width: 100%
-        transition: background .3s
-        padding: 15px 0 12px
+.servisec-item
+    position: relative
+    text-align: center
+    max-width: 186px
+    width: 100%
+    transition: background .3s
+    padding: 15px 0 12px
+    border-radius: 10px
+    overflow: hidden
+    &::before
+        content: ''
+        position: absolute
+        left: 0
+        right: 0
+        bottom: 0
+        top: 0
         border-radius: 10px
-        &:hover
-            background: radial-gradient(100% 100% at 0% 0%, #FEB301 0%, #F36D1C 51.04%, #FB196F 100%)
-            color: #fff
-
-            svg path
-                fill: #fff
-
+        background: radial-gradient(100% 100% at 0% 0%, #FEB301 0%, #F36D1C 51.04%, #FB196F 100%)
+        width: 0
+        height: 0
+        margin: auto
+        transition: all .3s
+        z-index: -1
+    &:hover
+        color: #fff
+        &::before
+            width: 100%
+            height: 100%
+        svg path
+            fill: #fff
         &__icon
             margin: 0 auto 17px
-
         &__title
             max-width: 151px
             margin: 0 auto
